<resources>
    <string name="app_name">SportCarSale</string>
    <string name="login_register">Login/Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="back_button">back button</string>
    <string name="log_out">Log out</string>
    <string name="all_cars">All cars</string>
    <string name="user_cars">User Cars</string>
    <string name="add_car">Add car</string>
    <string name="settings">Settings</string>
    <string name="prod_year">Prod. year</string>
    <string name="mileage">Mileage</string>
    <string name="price">Price</string>
    <string name="engine_vol">Engine vol.</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="filterList">FilterList</string>
    <string name="year_from">Year from</string>
    <string name="year_to">Year to</string>
    <string name="price_from">Price from</string>
    <string name="price_to">Price to</string>
    <string name="engine_vol_from">Engine vol. from</string>
    <string name="engine_vol_to">Engine vol. to</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="auto_login">Auto login</string>
</resources>